--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:mapbox_cameraZoom="5"
         app:mapbox_styleUrl="@string/mapbox_style_mapbox_streets" />
 
 </android.support.constraint.ConstraintLayout>
